{{$NEXT}}

2.14    2017-10-28


- This release is based on version 2017c of the Olson database. This release
  includes contemporary changes for Fiji, Namibia, Northern Cyprus, Sudan,
  Tonga, and Turks & Caicos.


2.13    2017-06-01

- Really fix the indexing issue. For reals this time. I'm totally not
  kidding. Thanks to Grinnz on #metacpan for giving me the solution.


2.12    2017-06-01

- Attempting to fix indexing of DateTime::TimeZone::Catalog on metacpan
  again. No real code or zone changes. Reported by Greg Oscwhald. GH #19.


2.11    2017-03-22

- This release is based on version 2017b of the Olson database. This release
  includes contemporary changes for Haiti.


2.10    2017-03-01

- This release is based on version 2017a of the Olson database. This release
  includes contemporary changes for Mongolia and Chile.


2.09    2016-11-24

- This release is based on version 2016j of the Olson database. This release
  includes contemporary changes for Russia (Europe/Saratov).


2.08    2016-11-12

- Switched from RT to the GitHub issue tracker.


2.07    2016-11-02

- This release is based on version 2016i of the Olson database. This release
  includes contemporary changes for Tonga and Antarctica/Casey. There is also
  a new zone for Northern Cyprus, Asia/Famagusta, which differs from other
  parts of Cyprus.


2.06    2016-10-20

- This release is based on version 2016h of the Olson database. This release
  includes contemporary changes for Palestine.


2.05    2016-09-28

- This release is based on version 2016g of the Olson database. This release
  includes contemporary changes for Turkey.


2.04    2016-09-26

- Automatically add the latest version of DateTime::Time::Local::Win32 as a
  prereqs on Windows system automatically when building the release.


2.03    2016-09-17

- Bump minimum required Perl to 5.8.4 from 5.8.1. This matches DateTime.pm
  itself.


2.02    2016-09-16

- Replaced Params::Validate with Params::ValidationCompiler.

