@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Make the local zone lookup code handle the case where /usr/share/zoneinfo is
+  a symlink, as it apparently is on recent versions of macOS (10.13). Fixed by
+  Tom Wyant. GH #22 and #23.
+
+
 2.14    2017-10-28
 
 
